--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
   <meta name="description" content="CoreUI - Free Angular Admin Template">
   <meta name="author" content="Łukasz Holeczek">
   <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
-	<link rel="shortcut icon" href="assets/favicon.ico">
+  <link rel="shortcut icon" href="assets/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro|Titillium+Web&display=swap" rel="stylesheet">
 	<title>FINAN$YS - Finanças Pessoais</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script>
